@@ -558,7 +558,7 @@
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\pardirnatural\qc
 
-\f0\fs24 \cf0 load-into-graph}</string>
+\f0\fs24 \cf0 load-graph}</string>
 			</dict>
 		</dict>
 	</array>
