@@ -38,7 +38,7 @@ def get_parser():
 
     Example (results will be in ``random-20-a.fa.part``)::
 
-        load-into-graph.py -k 20 example tests/test-data/random-20-a.fa
+        load-graph.py -k 20 example tests/test-data/random-20-a.fa
         partition-graph.py example
         merge-partitions.py -k 20 example
         annotate-partitions.py -k 20 example tests/test-data/random-20-a.fa
