@@ -46,7 +46,7 @@ def get_parser():
     epilog = """\
     Example (results will be in ``example.group0000.fa``)::
 
-        load-into-graph.py -k 20 example tests/test-data/random-20-a.fa
+        load-graph.py -k 20 example tests/test-data/random-20-a.fa
         partition-graph.py example
         merge-partitions.py -k 20 example
         annotate-partitions.py -k 20 example tests/test-data/random-20-a.fa
